# felt-mcp

./: .editorconfig  .envrc  .gitignore  .justfile  .zizmor.yml  ADRs.md  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  release.yml
src/felt_mcp/: felt_api.py  main.py  server.py
tests/: test_felt_api.py
